components/nonmem/src/parsing/snapshots/nonmem__parsing__parser__tests__can_parse_mod_files@everything-prob.mod.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: model
input_file: components/nonmem/test_data/parser/everything-prob.mod
---
Model {
    problem: "Some header #2 created from pharos see run001_metadata.json for details. User added comment should be preserved",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "DV",
        ),
        Aliased {
            from: "AMT",
            to: "DOSE",
        },
        Included(
            "DV",
        ),
        Included(
            "WT",
        ),
        Included(
            "AGE",
        ),
        Included(
            "SEX",
        ),
        Included(
            "CREA",
        ),
        Dropped(
            "DATE",
        ),
    ],
    data: Data {
        path: "..\\data.csv",
        ignore: [
            Marker(
                "#",
            ),
            ValueFilter(
                DataValueFilter {
                    field: "DVID",
                    op: Equal,
                    value: Number(
                        3.0,
                    ),
                },
            ),
            ValueFilter(
                DataValueFilter {
                    field: "ID",
                    op: Equal,
                    value: Number(
                        3.14,
                    ),
                },
            ),
            ValueFilter(
                DataValueFilter {
                    field: "ID",
                    op: Equal,
                    value: String(
                        "C",
                    ),
                },
            ),
        ],
        accept: [
            ValueFilter(
                DataValueFilter {
                    field: "AGE",
                    op: Greater,
                    value: Number(
                        3.0,
                    ),
                },
            ),
            ValueFilter(
                DataValueFilter {
                    field: "SEX",
                    op: Equal,
                    value: Number(
                        1.0,
                    ),
                },
            ),
        ],
        num_records: Some(
            200,
        ),
        null_value: None,
    },
    subroutines: [
        Builtin {
            name: "ADVAN4",
            tolerance: None,
        },
        Builtin {
            name: "TRANS4",
            tolerance: None,
        },
        Other(
            "fa.90",
        ),
    ],
    theta_parameters: [
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 1.5,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "THETA(1) and THETA(2)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.5,
            upper_bound: Some(
                2.0,
            ),
            is_fixed: false,
            comment: Some(
                "THETA(1) and THETA(2)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 2.3,
            upper_bound: None,
            is_fixed: true,
            comment: Some(
                "THETA(3)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 0.8,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "THETA(4) and THETA(5)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 0.25,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "THETA(4) and THETA(5)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: Some(
                1.0,
            ),
            initial_value: 2.3,
            upper_bound: None,
            is_fixed: true,
            comment: Some(
                "THETA(6)",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 0.75,
            upper_bound: None,
            is_fixed: true,
            comment: Some(
                "THETA(7)",
            ),
            parsed_comment: None,
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.04,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "ETA(1) - CL (diagonal)",
                    ),
                    parsed_comment: None,
                },
            ],
        },
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.17,
                    upper_bound: None,
                    is_fixed: false,
                    comment: None,
                    parsed_comment: None,
                },
            ],
        },
        ParameterBlock {
            structure: Block {
                size: 2,
            },
            parametrization: Some(
                Correlation,
            ),
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.2,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "ETA(2) - V (SD)",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.3,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "ETA(2)-ETA(3) correlation, ETA(3) - KA (SD)",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "ETA(2)-ETA(3) correlation, ETA(3) - KA (SD)",
                    ),
                    parsed_comment: None,
                },
            ],
        },
        ParameterBlock {
            structure: BlockSame {
                size: 2,
            },
            parametrization: None,
            parameters: [],
        },
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: Some(
                        0.0,
                    ),
                    initial_value: 0.1,
                    upper_bound: Some(
                        1.0,
                    ),
                    is_fixed: true,
                    comment: Some(
                        "ETA(6) - fixed diagonal",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Block {
                size: 2,
            },
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "Proportional error variance",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.002,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "Prop-Add covariance, Additive error variance",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.25,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "Prop-Add covariance, Additive error variance",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    estimations: [
        Estimation {
            method: Fo,
            msfo: None,
            file: None,
        },
        Estimation {
            method: Foce,
            msfo: Some(
                "../2.MSF",
            ),
            file: None,
        },
        Estimation {
            method: Foce,
            msfo: None,
            file: Some(
                "run001.est",
            ),
        },
        Estimation {
            method: Imp,
            msfo: None,
            file: Some(
                "est",
            ),
        },
    ],
    tables: [
        "../2.TAB",
        "001.tab",
        "../2par.TAB",
    ],
    is_simulation_only: true,
}
